<resources>
    <string name="app_name">Sprinklehub</string>
        <string name="api_version">1</string>
        <string name="drawer_open">Open</string>
        <string name="drawer_close">Close</string>
        <string name="DownArrow">&#xf107;</string>
        <string name="nav_item_friends">Friends</string>
        <string name="nav_item_notifications">Messages</string>
        <string name="nav_item_home">Home</string>
        <string name="nav_item_profile">Profile</string>
        <string name="nav_item_addresses">Addresses</string>
        <string name="nav_item_reset_password">Reset Password</string>
        <string name="nav_item_invite">Invite</string>
        <string name="nav_item_logout">Logout</string>
        <string name="nav_item_sync">Sync</string>
        <string name="nav_item_reset_surprises">Surprises</string>
        <string name="hint_cust_id"><font size="15">Name for e.g. Customer ID</font></string>
        <string-array name="nav_drawer_labels">
            <item>@string/nav_item_home</item>
            <item>@string/nav_item_profile</item>
            
            <item>@string/nav_item_reset_password</item>
            <item>@string/nav_item_invite</item>
            <item>@string/nav_item_logout</item>
            
            
        </string-array>
        <string name="perf_data_version">perf_data_version</string>
        <string name="search_hint">Company or Product</string>
        <string name="search_result">Search Result!</string>
        <string name="title_activity_signup">Sign Up</string>
        <string name="error_no_response">Embarrassing. Server down :(</string>
        <string name="hello_world">Hello world!</string>
        <string name="action_settings">Settings</string>
        <string name="title_activity_organization_list">Organizations</string>
        <string name="title_activity_product_list">Products</string>
        <string name="title_activity_support_service_list">Services</string>
        <string name="OrgID">OrgID</string>
        <string name="ProductID">ProductID</string>
        <string name="SupportServiceID">SupportServiceID</string>
        <string name="sync_account_type">io.iserve.iserveandroid</string>
        <string name="account_type">io.iserve.iserveandroid</string>
        <string name="content_authority">io.iserve.iserveandroid</string>
        <string name="logout_message">Your changes will be discarded, Do you want proceed?</string>
        <string name="splash_screen_timeout">2000</string>
        <string name="title_activity_splash_screen">Splash1Screen</string>
        <string name="title_activity_product_details">ProductDetails</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="title_activity_landing">King\'s Landing</string>
        <string name="title_activity_organization_details">OrganizationDetails</string>
        <string name="title_activity_search_results">SearchResultsActivity</string>
        <string name="title_activity_new_request">NewRequestActivity</string>
        <string name="intro_message">intro_message</string>
        <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>
        <string name="request_permission">This app needs camera permission.</string>
        <string name="no_internet_message">No Internet. Work offline and sync when phone is connected back to Internet.</string>
        <string name="placeholder_first_name">Enter first name</string>
        <string name="placeholder_last_name">Enter last name</string>
        <string name="placeholder_email">Enter email</string>
        <string name="placeholder_Mobile_number">Mobile number</string>
        <string name="placeholder_contact_number">Contact number</string>
        <string name="placeholder_dob">DOB</string>
        <string name="placeholder_alternative_email"> Alternative Email</string>
        <string name="placeholder_password">Password</string>
        <string name="placeholder_confirm_password"> Confirm Password</string>
        <string name="text_SignUp">Register With iServe</string>
        <string name="text_login">Login</string>
        <string name="text_register">Register</string>
        <string name="text_first_name">First Name</string>
        <string name="text_last_name">Last Name</string>
        <string name="text_email">Email</string>
        <string name="text_mobile_number">Mobile Number</string>
        <string name="text_alternative_email">Alternative Email</string>
        <string name="text_address1">Address Line 1</string>
        <string name="text_address2">Address Line 2</string>
        <string name="text_address">Address Name</string>
        <string name="text_state">State</string>
        <string name="text_landmark">Landmark</string>
        <string name="text_city">City</string>
        <string name="text_pincode">Pin Code</string>
        <string name="text_tag">set as Default</string>
        <string name="text_country">Country</string>
        <string name="text_select">Select</string>
        <string name="text_update_address">Update Address</string>
        <string name="text_save_address">Save Address</string>
        <string name="title_activity_request_show">RequestShowActivity</string>
        <string name="success_image_upload">Image Upload Successfully</string>
        <string name="success_profile_upload">Profile Upload Successfully</string>
        <string name="title_activity_address_acivity">Address Acivity</string>
        <string name="title_activity_demo">Demo</string>
        <string name="title_activity_maps">Map</string>
        <string name="title_activity_profile">Profile Activity</string>
    <string name="numberofcans">No of water can required for month</string>
    <string name="vendor">Vendor</string>
    <string name="numberofreturncans">No of water can return</string>
    <string name="timerequired">Time slot for delivery</string>
    <string name="totalprice">\u20B9</string>
    <string name="paymentprocess">Payment Process</string>
    <string name="promocodedesc">Promocode available for this item is:</string>
    <string name="promocode">promocode</string>
    <string name="minamount">Min Amount:</string>
    <string name="promoamount">Promo Amount:</string>
</resources>