<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monthly Pack"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/numberofcans"
        android:textStyle="bold"
        android:id="@+id/textView42"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_alignBottom="@+id/textView42"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView42" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/vendor"
        android:textStyle="bold"
        android:id="@+id/textView43"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/textView42"
        android:layout_alignStart="@+id/textView42" />

    <Spinner
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:id="@+id/sp_vendoritems"
        android:layout_alignBottom="@+id/textView43"
        android:layout_toEndOf="@+id/textView43"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:text="@string/numberofreturncans"
        android:id="@+id/textView44"
        android:layout_above="@+id/sp_timeslots"
        android:layout_alignStart="@+id/textView43"
        android:layout_marginBottom="19dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_alignBottom="@+id/textView44"
        android:layout_toEndOf="@+id/textView44"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:text="@string/timerequired"
        android:id="@+id/textView45"
        android:layout_below="@+id/textView43"
        android:layout_alignStart="@+id/textView44"
        android:layout_marginTop="129dp" />

    <Spinner
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:id="@+id/sp_timeslots"
        android:layout_alignBottom="@+id/textView45"
        android:layout_toEndOf="@+id/textView45"
        android:layout_marginStart="18dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Promo Code"
        android:id="@+id/checkBox4"
        android:layout_below="@+id/textView45"
        android:layout_alignStart="@+id/textView45"
        android:layout_marginStart="17dp"
        android:layout_marginTop="59dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/totalprice"
        android:textStyle="bold"
        android:id="@+id/textView46"
        android:layout_below="@+id/checkBox4"
        android:layout_alignStart="@+id/editText6"
        android:layout_marginTop="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Rs X"
        android:id="@+id/textView47"
        android:layout_alignTop="@+id/textView46"
        android:layout_toEndOf="@+id/textView46" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paymentprocess"
        android:id="@+id/btn_paymnetprocess"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/login_btn"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView46"
        android:layout_toStartOf="@+id/editText5"
        android:layout_alignEnd="@+id/editText5" />

</RelativeLayout>